# freenet-idle-poc

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html  prod-webapp-id.txt  style.css
frontend/locales/: de.json  en.json  es.json  fr.json  ja.json  ru.json
frontend/src/: delegate_client.rs  identity.rs  main.rs  ws_shim.rs
frontend/src/app/: core.rs  i18n.rs  i18n_loader.rs  i18n_shared.rs  keys.rs  keys.rs.bak  mod.rs  prefs.rs  render.rs  theme_loader.rs  types.rs  util.rs
frontend/src/app/tabs/: achievements.rs  help.rs  mod.rs
frontend/src/app/widgets/: area.rs  battle.rs  equipment.rs  feed.rs  graph_edges.rs  mod.rs  overlay.rs  top.rs
frontend/src/freenet/: actions.rs  contract.rs  heartbeat.rs  mod.rs  reconnect.rs
frontend/src/freenet/actions/: activity.rs  area.rs  battle.rs  dispatch.rs  estate.rs  farm.rs  gear.rs  legacy.rs  messaging.rs  pull_presence.rs  seed.rs  settings.rs  shop.rs  ui_prefs.rs
frontend/src/game/: derived.rs  mod.rs
frontend/themes/: dusk.json  forest.json  high-contrast.json  parchment.json
guilds-contract/: Cargo.toml  rust-toolchain.toml
guilds-contract/src/: lib.rs
identity-delegate/: Cargo.toml  freenet.toml  rust-toolchain.toml
identity-delegate/src/: actions.rs  combat.rs  derived.rs  lib.rs  progression.rs  state.rs
identity-delegate/src/actions/: activity.rs  area.rs  battle.rs  boss.rs  estate.rs  farm.rs  gear.rs  insight.rs  inventory.rs  legacy.rs  messaging.rs  presence.rs  routine.rs  shop.rs  tokens.rs
identity-delegate/src/combat/: burst.rs  tick.rs
mailbox-contract/: Cargo.toml  rust-toolchain.toml
mailbox-contract/src/: lib.rs
presence-contract/: Cargo.toml  rust-toolchain.toml
presence-contract/src/: lib.rs  tests.rs
published-contract/: README.md
published-contract/guilds/: sha256.txt
published-contract/mailbox/: sha256.txt
published-contract/presence/: sha256.txt
published-delegate/: README.md  sha256.txt
scripts/: check-contract-byte-equal.sh  check-delegate-byte-equal.sh  dev-publish.bat  dev-publish.sh  dev-watch.bat  dev-watch.sh  dev.bat  dev.sh  prod-publish.sh  prod-update-webapp.sh
shared/: Cargo.toml
shared-wire/: Cargo.toml
shared-wire/src/: bytes.rs  guilds.rs  lib.rs  mailbox.rs  presence.rs  types.rs
shared/src/: envelope.rs  fmt.rs  freenet.rs  game.rs  lib.rs  rpc.rs
shared/src/freenet/: guilds.rs  mailbox.rs  presence.rs  types.rs
shared/src/game/: achievements.rs  activities.rs  areas.rs  battle.rs  combat_log.rs  endings.rs  enemies.rs  estate.rs  forms.rs  gear.rs  insight.rs  inventory.rs  legacy.rs  plot.rs  reset.rs  reveal.rs  routine.rs  shop.rs  skills.rs  status.rs  tokens.rs  wilds.rs  xp.rs
