[package]
name = "idle-frontend"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
shared = { package = "idle-shared", path = "../shared" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
bincode = "1.3"
include_dir = "0.7"
once_cell = "1.19"
log = "0.4"
wasm-logger = "0.2"
hex = "0.4"
bs58 = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }

getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize", "rand_core"] }
rand = { version = "0.8", features = ["std_rng", "small_rng"] }

# Pinned to the wire version the running node speaks.
freenet-stdlib = { version = "0.6.1", features = ["net"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "Response",
    "Request",
    "RequestInit",
    "HtmlElement",
    "HtmlInputElement",
    "Storage",
    "Location",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "console",
    "IdbFactory",
    "IdbDatabase",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbVersionChangeEvent",
    "DomException",
    "Event",
    "Navigator",
]
