[package]
name = "guilds-contract"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { package = "idle-shared", path = "../shared" }
freenet-stdlib = { path = "../../freenet-stdlib/rust", features = ["contract"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[features]
default = ["freenet-main-contract"]
contract = ["freenet-stdlib/contract"]
freenet-main-contract = []

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]
