[package]
name = "identity-delegate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { package = "idle-shared", path = "../shared" }
freenet-stdlib = { path = "../../freenet-stdlib/rust", features = ["contract"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }

[features]
default = ["freenet-main-delegate"]
freenet-main-delegate = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]
