[package]
name = "identity-delegate"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

# NOTE (lockfile isolation — see docs/delegate-stability.md):
#
# This crate lives outside the frontend/contracts workspace and has
# its own Cargo.lock so that workspace dep churn (yew/wasm-bindgen/
# anything) cannot rotate the delegate's wasm bytes — and therefore
# the delegate's `code_hash`. The `code_hash` namespaces every
# `SecretsStore` write (`<base>/<delegate.encode()>/<secret_id>`), so
# a rotation strands every player's inventory.
#
# Versions below are pinned with `=x.y.z` to the values currently
# resolved in `identity-delegate/Cargo.lock`. Bumping any pin is a
# deliberate act — pair it with `scripts/check-delegate-byte-equal.sh`
# and a refreshed `published-delegate/` snapshot.
[dependencies]
shared = { package = "idle-shared", path = "../shared" }
freenet-stdlib = { path = "../../freenet-stdlib/rust", features = ["contract"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
bincode = "=1.3.3"
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["alloc"] }

[features]
default = ["freenet-main-delegate"]
freenet-main-delegate = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]
