[package]
name = "mailbox-contract"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# §6.6 split: depend on `idle-shared-wire` (wire-only) rather than
# `idle-shared`. Editing game/balance code no longer rebuilds this
# contract — its `code_hash` stays stable so the on-network
# instance survives (preserves mailbox state).
#
# Lockfile isolation (Approach A — see docs/delegate-stability.md).
# `=x.y.z` pins below mirror the resolved versions in this crate's
# `Cargo.lock`. Bumps must be paired with a snapshot refresh under
# `published-contract/mailbox/` and the prod-publish gate.
shared = { package = "idle-shared-wire", path = "../shared-wire" }
freenet-stdlib = { path = "../../freenet-stdlib/rust", features = ["contract"] }
serde = { version = "=1.0.228", features = ["derive"] }
bincode = "=1.3.3"

[features]
default = ["freenet-main-contract"]
contract = ["freenet-stdlib/contract"]
freenet-main-contract = []

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]
