[package]
name = "presence-contract"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# §6.6 split: depend on `idle-shared-wire` (wire-only) rather than
# `idle-shared` (which carries game logic). Editing game/balance
# code no longer rebuilds this contract — its `code_hash` stays
# stable so the on-network instance survives (preserves
# cumulative_damage / leaderboard aggregate).
#
# Lockfile isolation (Approach A — see docs/delegate-stability.md):
# this crate is its own workspace root, so dep-bumps in the frontend
# can't reach it. `=x.y.z` pins on WASM-direct deps match the
# resolved versions in this crate's `Cargo.lock`. A bump here is
# deliberate and must be paired with a refreshed snapshot under
# `published-contract/presence/` plus the prod-publish gate.
shared = { package = "idle-shared-wire", path = "../shared-wire" }
freenet-stdlib = { path = "../../freenet-stdlib/rust", features = ["contract"] }
serde = { version = "=1.0.228", features = ["derive"] }
bincode = "=1.3.3"

[features]
default = ["freenet-main-contract"]
contract = ["freenet-stdlib/contract"]
freenet-main-contract = []

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]
