[package]
name = "idle-shared"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize"] }
# sha2 is used by `guild_id_from_name` — pure-Rust SHA-256 works in
# the WASM contract sandbox without needing host crypto syscalls.
sha2 = { version = "0.10", default-features = false }

[workspace]
